test/gpu/native/studies/sort/nonGpuError.chpl
use GPU;
var A: [1..100] uint;
on here.gpus[0] {
    gpuSort(A);
}
